--- a/html/work.html
+++ b/html/work.html
@@ -20,14 +20,14 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="#">work<span class="sr-only"></span></a>
+                    <a class="nav-link" href="#"><b>work</b><span class="sr-only"></span></a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">resume</a>
                 </li>
             </ul>
             <div class="mx-auto">
-                <img src="../img/50h/logo_2.png" height="60px">
+                <a href="../index.html"><img src="../img/50h/logo_2.png" height="60px"></a>
             </div>
             </ul>
             <ul class="navbar-nav">
@@ -42,7 +42,56 @@
             </ul>
         </div>
     </nav>
-    <h4 style="text-align:center;">Brain of an engineer, Heart of an Artist</h4>
+    <h4 style="text-align:center;">My Work</h4>
+    <br>
+    <br>
+    <br>
+    <h5 style="text-align:center;">Work examples from Jobs, Internships and “Just for fun” stuff.</h5>
+    <!-- Gallery -->
+    <section class="gallery mx-auto">
+        <ol>
+            <li>
+                <a href="https://www.flickr.com/photos/brandonjamesscott/7636971166/" target="_blank">
+                    <div class="info">
+                        <h3>She Walks with Tigers</h3>
+                        <p>by Brandon James Scott</p>
+                    </div>
+                </a>
+            </li>
+            <li>
+                <a href="https://www.flickr.com/photos/ocularinvasion/3479135247/" target="_blank">
+                    <div class="info">
+                        <h3>King Melt</h3>
+                        <p>by ocularinvasion</p>
+                    </div>
+                </a>
+            </li>
+            <li>
+                <a href="https://www.flickr.com/photos/karloff/3964237502/" target="_blank">
+                    <div class="info">
+                        <h3>SlowAtCoffee</h3>
+                        <p>by Will.House</p>
+                    </div>
+                </a>
+            </li>
+            <li>
+                <a href="https://www.flickr.com/photos/taffeta/9394327597/" target="_blank">
+                    <div class="info">
+                        <h3>3mousses p17</h3>
+                        <p>by pilllpat(agence eureka)</p>
+                    </div>
+                </a>
+            </li>
+            <li>
+                <a href="https://www.flickr.com/photos/muxxibunsh/7005330638/" target="_blank">
+                    <div class="info">
+                        <h3>Monster soup</h3>
+                        <p>by Muxxi.</p>
+                    </div>
+                </a>
+            </li>
+        </ol>
+    </section>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
