more alignment fixed.

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-sm navbar-light">
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <nav class="navbar navbar-expand-sm navbar-light max-width mx-auto">
+        <button class="navbar-toggler button_brand mx-auto" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
@@ -43,7 +43,7 @@
         </div>
     </nav>
     <h4 style="text-align:center;">Brain of an engineer, Heart of an Artist</h4>
-    <div class="box black">
+    <div class="box black max-width mx-auto">
         <img src="img/sahas.jpg" width="400px" style="margin-left: 0px">
         <div class="white-text right" style="margin-top: 250px">
             <h1>
