--- a/html/work.html
+++ b/html/work.html
@@ -13,11 +13,11 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-sm navbar-light">
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <nav class="navbar navbar-expand-sm navbar-light max-width mx-auto">
+        <button class="navbar-toggler button" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
+        <div class="collapse navbar-collapse" id="navbarNav" style="align-content: center;">
             <ul class="navbar-nav">
                 <li class="nav-item">
                     <a class="nav-link" href="#"><b>work</b><span class="sr-only"></span></a>
@@ -51,7 +51,7 @@
     <br>
     <br>
     <!-- Gallery -->
-    <section class="gallery mx-auto">
+    <section class="gallery mx-auto max-width">
         <ol>
             <li>
                 <a href="https://www.flickr.com/photos/brandonjamesscott/7636971166/" target="_blank">
