--- a/html/work.html
+++ b/html/work.html
@@ -14,8 +14,8 @@
 
 <body>
     <nav class="navbar navbar-expand-sm navbar-light max-width mx-auto">
-        <button class="navbar-toggler button" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
+        <button class="navbar-toggler no_border_button mx-auto" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <img src="../img/50h/logo_2.png" height="50px"></img>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav" style="align-content: center;">
             <ul class="navbar-nav">
