nav item hidden OK

--- a/html/work.html
+++ b/html/work.html
@@ -26,10 +26,11 @@
                     <a class="nav-link" href="#">resume</a>
                 </li>
             </ul>
-            <div class="mx-auto">
-                <a href="../index.html"><img src="../img/50h/logo_2.png" height="60px"></a>
-            </div>
-            </ul>
+            <span class="navbar-text ml-auto d-none d-sm-block">
+                <div class="mx-auto">
+                    <img src="../img/50h/logo_2.png" height="60px">
+                </div>
+            </span>
             <ul class="navbar-nav">
                 <a class="ml-auto">
                     <li class="nav-item ">
