--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
         </div>
     </nav>
     <h4 style="text-align:center;">Brain of an engineer, Heart of an Artist</h4>
-    <div class="box black max-width mx-auto">
-        <img src="img/sahas.jpg" width="400px" style="margin-left: 0px">
-        <div class="white-text right" style="margin-top: 250px">
+    <div class="box black max-width mx-auto resize_box">
+        <img src="img/sahas.jpg" width="400px" style="margin-left: 0px" class="logo_image">
+        <div class="white-text typewriter-text-align" style="margin-top: 250px">
             <h1>
                 Sahas is interested in
             </h1>
