--- a/html/work.html
+++ b/html/work.html
@@ -28,7 +28,7 @@
             </ul>
             <span class="navbar-text ml-auto d-none d-sm-block">
                 <div class="mx-auto">
-                    <img src="../img/50h/logo_2.png" height="60px">
+                    <a href="../index.html"><img src="../img/50h/logo_2.png" height="60px">
                 </div>
             </span>
             <ul class="navbar-nav">
