--- a/html/work.html
+++ b/html/work.html
@@ -19,6 +19,9 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNav" style="align-content: center;">
             <ul class="navbar-nav">
+                <li class="nav-item d-md-none">
+                    <a class="nav-link" href="../index.html">home<span class="sr-only"></span></a>
+                </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#"><b>work</b><span class="sr-only"></span></a>
                 </li>
