--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
+                <li class="nav-item d-md-none">
+                    <a class="nav-link" href="#"><b>home</b><span class="sr-only"></span></a>
+                </li>
                 <li class="nav-item">
                     <a class="nav-link" href="html/work.html">work<span class="sr-only"></span></a>
                 </li>
