--- a/html/work.html
+++ b/html/work.html
@@ -37,7 +37,7 @@
             <ul class="navbar-nav">
                 <a class="ml-auto">
                     <li class="nav-item ">
-                        <a class="nav-link" href="#">about</a>
+                        <a class="nav-link" href="about.html">about</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">contact</a>
