added instructables images to work.html

--- a/html/work.html
+++ b/html/work.html
@@ -56,10 +56,10 @@
     <section class="gallery mx-auto max-width">
         <ol>
             <li>
-                <a href="https://www.flickr.com/photos/brandonjamesscott/7636971166/" target="_blank">
+                <a href="https://www.instructables.com/id/Torque-the-DIY-All-Terrain-Electric-Cruizer-Board/" target="_blank">
                     <div class="info">
-                        <h3>She Walks with Tigers</h3>
-                        <p>by Brandon James Scott</p>
+                        <h3>Torque</h3>
+                        <p>Electric Skateboard</p>
                     </div>
                 </a>
             </li>
