added more images to work.html

--- a/html/work.html
+++ b/html/work.html
@@ -58,40 +58,40 @@
             <li>
                 <a href="https://www.instructables.com/id/Torque-the-DIY-All-Terrain-Electric-Cruizer-Board/" target="_blank">
                     <div class="info">
-                        <h3>Torque</h3>
-                        <p>Electric Skateboard</p>
+                        <h3>Electric Skateboard</h3>
+                        <!-- <p>Electric Skateboard</p> -->
                     </div>
                 </a>
             </li>
             <li>
                 <a href="https://www.flickr.com/photos/ocularinvasion/3479135247/" target="_blank">
                     <div class="info">
-                        <h3>King Melt</h3>
-                        <p>by ocularinvasion</p>
+                        <h3>GPS Shoe Sole</h3>
+                        <!-- <p>by ocularinvasion</p> -->
                     </div>
                 </a>
             </li>
             <li>
                 <a href="https://www.flickr.com/photos/karloff/3964237502/" target="_blank">
                     <div class="info">
-                        <h3>SlowAtCoffee</h3>
-                        <p>by Will.House</p>
+                        <h3>Raspberry Pi Laptop</h3>
+                        <!-- <p>by Will.House</p> -->
                     </div>
                 </a>
             </li>
             <li>
-                <a href="https://www.flickr.com/photos/taffeta/9394327597/" target="_blank">
+                <a href="https://www.instructables.com/id/Coco-Mic-The-DIY-Studio-Quailty-USB-Mic-MEMS-techn/" target="_blank">
                     <div class="info">
-                        <h3>3mousses p17</h3>
-                        <p>by pilllpat(agence eureka)</p>
+                        <h3>MEMS USB Studio Mic</h3>
+                        <!-- <p>by pilllpat(agence eureka)</p> -->
                     </div>
                 </a>
             </li>
             <li>
                 <a href="https://www.flickr.com/photos/muxxibunsh/7005330638/" target="_blank">
                     <div class="info">
-                        <h3>Monster soup</h3>
-                        <p>by Muxxi.</p>
+                        <h3>CNC Laser Engraver</h3>
+                        <!-- <p>by Muxxi.</p> -->
                     </div>
                 </a>
             </li>
