css changed for work.html

--- a/html/work.html
+++ b/html/work.html
@@ -56,6 +56,14 @@
     <section class="gallery mx-auto max-width">
         <ol>
             <li>
+                <a href="#" target="_blank">
+                    <div class="info">
+                        <h3>Electric Unicycle</h3>
+                        <!-- <p>by Muxxi.</p> -->
+                    </div>
+                </a>
+            </li>
+            <li>
                 <a href="https://www.instructables.com/id/Torque-the-DIY-All-Terrain-Electric-Cruizer-Board/" target="_blank">
                     <div class="info">
                         <h3>Electric Skateboard</h3>
@@ -95,6 +103,7 @@
                     </div>
                 </a>
             </li>
+
         </ol>
     </section>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
