css changed for work.html

--- a/html/work.html
+++ b/html/work.html
@@ -96,7 +96,7 @@
                 </a>
             </li>
             <li>
-                <a href="https://www.flickr.com/photos/muxxibunsh/7005330638/" target="_blank">
+                <a href="https://www.instructables.com/id/MrEngraver-the-Desktop-Laser-Engraving-Machine/" target="_blank">
                     <div class="info">
                         <h3>CNC Laser Engraver</h3>
                         <!-- <p>by Muxxi.</p> -->
