--- a/html/work.html
+++ b/html/work.html
@@ -56,7 +56,7 @@
     <section class="gallery mx-auto max-width">
         <ol>
             <li>
-                <a href="#" target="_blank">
+                <a href="#">
                     <div class="info">
                         <h3>Electric Unicycle</h3>
                         <!-- <p>by Muxxi.</p> -->
