css changed for work.html

--- a/html/about.html
+++ b/html/about.html
@@ -47,9 +47,10 @@
         </div>
     </nav>
     <div class="center-text">
-        <h3 style="text-align: center; line-height: 2">Computer Science major who loves tinkering with <b>code</b> and <b>design.</b></h3>
+        <h6 style="text-align:center;">me</h6>
+        <br>
+        <h4 style="text-align: center; line-height: 2">Computer Science major who loves tinkering with <b>code</b> and <b>design.</b></h4>
     </div>
-    <br>
     <br>
     <br>
     <br>
