--- a/html/work.html
+++ b/html/work.html
@@ -46,9 +46,9 @@
             </ul>
         </div>
     </nav>
-    <h6 style="text-align:center;">My Work</h5>
+    <h6 style="text-align:center;">my work</h5>
     <br>
-    <h4 style="text-align:center;">Work examples from Jobs, Internships and “Just for fun” stuff.</h4>
+    <h4 style="text-align:center; line-height: 2">work examples from Jobs, Internships and “Just for fun” stuff.</h4>
     <br>
     <br>
     <br>
