--- a/html/resume.html
+++ b/html/resume.html
@@ -26,7 +26,7 @@
                     <a class="nav-link" href="work.html">work<span class="sr-only"></span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="resume.html">resume</a>
+                    <a class="nav-link" href="#"><b>resume</b></a>
                 </li>
             </ul>
             <span class="navbar-text ml-auto d-none d-sm-block">
@@ -37,7 +37,7 @@
             <ul class="navbar-nav">
                 <a class="ml-auto">
                     <li class="nav-item ">
-                        <a class="nav-link" href="#"><b>about</b></a>
+                        <a class="nav-link" href="about.html">about</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">contact</a>
@@ -46,20 +46,18 @@
             </ul>
         </div>
     </nav>
-    <div class="center-text">
-        <h6 style="text-align:center;">me</h6>
+    <h6 style="text-align:center;">my resume</h5>
         <br>
-        <h4 style="text-align: center; line-height: 2">Computer Science major who loves tinkering with <b>code</b> and <b>design.</b></h4>
-    </div>
-    <br>
-    <br>
-    <br>
-    <div>
-        <img src="../img/about_me.jpg" width="500px" class="center-image">
-    </div>
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+        <br>
+        <br>
+        <!--  TODO: Need to make it responsive -->
+        <div style="text-align:center">
+            <iframe src="../files/Sahas Resume.pdf#view=FitH" frameborder="0" height="800px" width="100%" style="max-width: 900px;">
+            </iframe>
+        </div>
+        <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </body>
 
 </html>
