--- a/html/work.html
+++ b/html/work.html
@@ -26,7 +26,7 @@
                     <a class="nav-link" href="#"><b>work</b><span class="sr-only"></span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">resume</a>
+                    <a class="nav-link" href="resume.html">resume</a>
                 </li>
             </ul>
             <span class="navbar-text ml-auto d-none d-sm-block">
