--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     <a class="nav-link" href="html/work.html">work<span class="sr-only"></span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">resume</a>
+                    <a class="nav-link" href="html/resume.html">resume</a>
                 </li>
             </ul>
             <span class="navbar-text ml-auto d-none d-sm-block">
