--- a/html/work.html
+++ b/html/work.html
@@ -47,67 +47,86 @@
         </div>
     </nav>
     <h6 style="text-align:center;">my work</h5>
-    <br>
-    <h4 style="text-align:center; line-height: 2">work examples from Jobs, Internships and “Just for fun” stuff.</h4>
-    <br>
-    <br>
-    <br>
-    <!-- Gallery -->
-    <section class="gallery mx-auto max-width">
-        <ol>
-            <li>
-                <a href="#">
-                    <div class="info">
-                        <h3>Electric Unicycle</h3>
-                    </div>
-                </a>
-            </li>
-            <li>
-                <a href="https://www.instructables.com/id/Torque-the-DIY-All-Terrain-Electric-Cruizer-Board/" target="_blank">
-                    <div class="info">
-                        <h3>Electric Skateboard</h3>
-                        <!-- <p>Electric Skateboard</p> -->
-                    </div>
-                </a>
-            </li>
-            <li>
-                <a href="https://www.flickr.com/photos/ocularinvasion/3479135247/" target="_blank">
-                    <div class="info">
-                        <h3>GPS Shoe Sole</h3>
-                        <!-- <p>by ocularinvasion</p> -->
-                    </div>
-                </a>
-            </li>
-            <li>
-                <a href="https://www.flickr.com/photos/karloff/3964237502/" target="_blank">
-                    <div class="info">
-                        <h3>Raspberry Pi Laptop</h3>
-                        <!-- <p>by Will.House</p> -->
-                    </div>
-                </a>
-            </li>
-            <li>
-                <a href="https://www.instructables.com/id/Coco-Mic-The-DIY-Studio-Quailty-USB-Mic-MEMS-techn/" target="_blank">
-                    <div class="info">
-                        <h3>MEMS USB Studio Mic</h3>
-                        <!-- <p>by pilllpat(agence eureka)</p> -->
-                    </div>
-                </a>
-            </li>
-            <li>
-                <a href="https://www.instructables.com/id/MrEngraver-the-Desktop-Laser-Engraving-Machine/" target="_blank">
-                    <div class="info">
-                        <h3>CNC Laser Engraver</h3>
-                        <!-- <p>by Muxxi.</p> -->
-                    </div>
-                </a>
-            </li>
-
-        </ol>
-    </section>
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+        <br>
+        <h4 style="text-align:center; line-height: 2">work examples from Jobs, Internships and “Just for fun” stuff.</h4>
+        <br>
+        <br>
+        <br>
+        <section class="gallery mx-auto max-width">
+            <ol>
+                <!-- <li>
+                    <a href="#">
+                        <div class="info">
+                            <h3>Cellular Automata</h3>
+                        </div>
+                    </a>
+                </li> -->
+                <li>
+                    <a href="#">
+                        <div class="info">
+                            <h3>Electric Unicycle</h3>
+                        </div>
+                    </a>
+                </li>
+                <li>
+                    <a href="https://github.com/ChitlangeSahas/UniWheel-Android-App" target="_blank">
+                        <div class="info">
+                            <h3>Unicycle App</h3>
+                        </div>
+                    </a>
+                </li>
+                <li>
+                    <a href="https://github.com/ChitlangeSahas/3D-Cellular-Automata" target="_blank">
+                        <div class="info">
+                            <h3>Cellular Automata</h3>
+                        </div>
+                    </a>
+                </li>
+                <li>
+                    <a href="https://www.instructables.com/id/Torque-the-DIY-All-Terrain-Electric-Cruizer-Board/" target="_blank">
+                        <div class="info">
+                            <h3>Electric Skateboard</h3>
+                            <!-- <p>Electric Skateboard</p> -->
+                        </div>
+                    </a>
+                </li>
+                <li>
+                    <a href="https://www.flickr.com/photos/ocularinvasion/3479135247/" target="_blank">
+                        <div class="info">
+                            <h3>GPS Shoe Sole</h3>
+                            <!-- <p>by ocularinvasion</p> -->
+                        </div>
+                    </a>
+                </li>
+                <li>
+                    <a href="https://www.flickr.com/photos/karloff/3964237502/" target="_blank">
+                        <div class="info">
+                            <h3>Raspberry Pi Laptop</h3>
+                            <!-- <p>by Will.House</p> -->
+                        </div>
+                    </a>
+                </li>
+                <li>
+                    <a href="https://www.instructables.com/id/Coco-Mic-The-DIY-Studio-Quailty-USB-Mic-MEMS-techn/" target="_blank">
+                        <div class="info">
+                            <h3>MEMS USB Studio Mic</h3>
+                            <!-- <p>by pilllpat(agence eureka)</p> -->
+                        </div>
+                    </a>
+                </li>
+                <li>
+                    <a href="https://www.instructables.com/id/MrEngraver-the-Desktop-Laser-Engraving-Machine/" target="_blank">
+                        <div class="info">
+                            <h3>CNC Laser Engraver</h3>
+                            <!-- <p>by Muxxi.</p> -->
+                        </div>
+                    </a>
+                </li>
+            </ol>
+        </section>
+        <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </body>
 
 </html>
