--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     </nav>
     <h5 style="text-align:center;">Brain of an engineer, Heart of an Artist</h5>
     <div class="box black max-width mx-auto resize_box">
-        <img src="img/sahas.jpg" width="400px" style="margin-left: 0px" class="logo_image">
+        <img src="https://raw.githubusercontent.com/ChitlangeSahas/ChitlangeSahas.github.io/master/img/sahas.jpg" width="400px" style="margin-left: 0px" class="logo_image">
         <div class="white-text typewriter-text-align" style="margin-top: 250px">
             <h1>
                 Sahas is interested in
