on hover div shows

--- a/html/work.html
+++ b/html/work.html
@@ -56,62 +56,78 @@
             <ol>
                 <li>
                     <a href="#">
-                        <div class="info">
-                            <h3>Electric Unicycle</h3>
+                        <div class="show_on_hover">
+                            <div class="info">
+                                <h3>ELECTRIC UNICYCLE</h3>
+                            </div>
+                            <svg class="bi bi-arrow-right-short bottom_right" width="3em" height="3em" viewBox="0 0 16 16" fill="white" xmlns="http://www.w3.org/2000/svg">
+                                <path fill-rule="evenodd" d="M8.146 4.646a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1 0 .708l-3 3a.5.5 0 0 1-.708-.708L10.793 8 8.146 5.354a.5.5 0 0 1 0-.708z" />
+                                <path fill-rule="evenodd" d="M4 8a.5.5 0 0 1 .5-.5H11a.5.5 0 0 1 0 1H4.5A.5.5 0 0 1 4 8z" />
+                            </svg>
+
                         </div>
                     </a>
                 </li>
                 <li>
                     <a href="https://github.com/ChitlangeSahas/UniWheel-Android-App" target="_blank">
-                        <div class="info">
-                            <h3>Unicycle App</h3>
+                        <div class="show_on_hover">
+                            <div class="info">
+                                <h3>UNICYCLE APP</h3>
+                            </div>
                         </div>
                     </a>
                 </li>
                 <li>
                     <a href="https://github.com/ChitlangeSahas/3D-Cellular-Automata" target="_blank">
-                        <div class="info">
-                            <h3>Cellular Automata</h3>
+                        <div class="show_on_hover">
+                            <div class="info">
+                                <h3>CELLULAR AUTOMATA</h3>
+                            </div>
                         </div>
                     </a>
                 </li>
                 <li>
                     <a href="https://www.instructables.com/id/Torque-the-DIY-All-Terrain-Electric-Cruizer-Board/" target="_blank">
-                        <div class="info">
-                            <h3>Electric Skateboard</h3>
-                            <!-- <p>Electric Skateboard</p> -->
+                        <div class="show_on_hover">
+                            <div class="info">
+                                <h3>ELECTRIC SKATEBOARD</h3>
+                            </div>
                         </div>
                     </a>
                 </li>
                 <li>
                     <a href="https://www.flickr.com/photos/ocularinvasion/3479135247/" target="_blank">
-                        <div class="info">
-                            <h3>GPS Shoe Sole</h3>
-                            <!-- <p>by ocularinvasion</p> -->
+                        <div class="show_on_hover">
+                            <div class="info">
+                                <h3>GPS SHOE SOLE</h3>
+                            </div>
                         </div>
                     </a>
                 </li>
                 <li>
                     <a href="https://www.flickr.com/photos/karloff/3964237502/" target="_blank">
-                        <div class="info">
-                            <h3>Raspberry Pi Laptop</h3>
-                            <!-- <p>by Will.House</p> -->
+                        <div class="show_on_hover">
+                            <div class="info">
+                                <h3>DIY LAPTOP</h3>
+                            </div>
                         </div>
                     </a>
                 </li>
                 <li>
                     <a href="https://www.instructables.com/id/Coco-Mic-The-DIY-Studio-Quailty-USB-Mic-MEMS-techn/" target="_blank">
-                        <div class="info">
-                            <h3>MEMS USB Studio Mic</h3>
-                            <!-- <p>by pilllpat(agence eureka)</p> -->
+                        <div class="show_on_hover">
+                            <div class="info">
+                                <h3>DIY STUDIO MIC</h3>
+                            </div>
                         </div>
                     </a>
                 </li>
                 <li>
                     <a href="https://www.instructables.com/id/MrEngraver-the-Desktop-Laser-Engraving-Machine/" target="_blank">
-                        <div class="info">
-                            <h3>CNC Laser Engraver</h3>
-                            <!-- <p>by Muxxi.</p> -->
+                        <div class="show_on_hover">
+                            <div class="info">
+                                <h3>CNC LASER ENGRAVER</h3>
+                            </div>
                         </div>
                     </a>
                 </li>
