--- a/html/about.html
+++ b/html/about.html
@@ -20,13 +20,26 @@
         <div class="collapse navbar-collapse" id="navbarNav" style="align-content: center;">
             <ul class="navbar-nav">
                 <li class="nav-item d-md-none">
-                    <a class="nav-link" href="../index.html">home<span class="sr-only"></span></a>
+                    <a class="nav-link" href="../index.html">
+                        <svg class="bi bi-dot" width="1.5em" height="1.5em" viewBox="0 0 16 16" fill="black" xmlns="http://www.w3.org/2000/svg" style="visibility: hidden">
+                            <path fill-rule="evenodd" d="M8 9.5a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3z" />
+                        </svg>
+                        home<span class="sr-only"></span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="work.html">work<span class="sr-only"></span></a>
+                    <a class="nav-link" href="work.html">
+                        <svg class="bi bi-dot" width="1.5em" height="1.5em" viewBox="0 0 16 16" fill="black" xmlns="http://www.w3.org/2000/svg" style="visibility: hidden">
+                            <path fill-rule="evenodd" d="M8 9.5a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3z" />
+                        </svg>
+                        work<span class="sr-only"></span>
+                    </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="resume.html">resume</a>
+                    <a class="nav-link" href="resume.html">
+                        <svg class="bi bi-dot" width="1.5em" height="1.5em" viewBox="0 0 16 16" fill="black" xmlns="http://www.w3.org/2000/svg" style="visibility: hidden">
+                            <path fill-rule="evenodd" d="M8 9.5a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3z" />
+                        </svg>
+                        resume</a>
                 </li>
             </ul>
             <span class="navbar-text ml-auto d-none d-sm-block">
@@ -37,10 +50,20 @@
             <ul class="navbar-nav">
                 <a class="ml-auto">
                     <li class="nav-item ">
-                        <a class="nav-link" href="#"><b>about</b></a>
+                        <a class="nav-link" href="#">
+                            <svg class="bi bi-dot" width="1.5em" height="1.5em" viewBox="0 0 16 16" fill="black" xmlns="http://www.w3.org/2000/svg" style="visibility: visible">
+                                <path fill-rule="evenodd" d="M8 9.5a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3z" />
+                            </svg>
+                            <b>about</b>
+                        </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">contact</a>
+                        <a class="nav-link" href="#">
+                            <svg class="bi bi-dot" width="1.5em" height="1.5em" viewBox="0 0 16 16" fill="black" xmlns="http://www.w3.org/2000/svg" style="visibility: hidden">
+                                <path fill-rule="evenodd" d="M8 9.5a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3z" />
+                            </svg>
+                            contact
+                        </a>
                     </li>
                 </a>
             </ul>
