--- a/index.html
+++ b/index.html
@@ -20,7 +20,11 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item d-md-none">
-                    <a class="nav-link" href="#"><b>home</b><span class="sr-only"></span></a>
+                    <a class="nav-link" href="#">
+                        <svg class="bi bi-dot" width="1.5em" height="1.5em" viewBox="0 0 16 16" fill="black" xmlns="http://www.w3.org/2000/svg">
+                            <path fill-rule="evenodd" d="M8 9.5a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3z" />
+                        </svg>
+                        <b>home</b><span class="sr-only"></span></a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="html/work.html">work<span class="sr-only"></span></a>
@@ -58,7 +62,7 @@
                 </h1>
         </div>
     </div>
-   <!--  <b>What I can do for you.</b>
+    <!--  <b>What I can do for you.</b>
     Coding <br>
     Design <br>
     Problem Solving<br> -->
