dots work only on big screen

--- a/html/work.html
+++ b/html/work.html
@@ -23,10 +23,10 @@
                     <a class="nav-link" href="../index.html">home<span class="sr-only"></span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">
-                        <svg class="bi bi-dot" width="1.5em" height="1.5em" viewBox="0 0 16 16" fill="black" xmlns="http://www.w3.org/2000/svg" style="visibility: visible">
-                            <path fill-rule="evenodd" d="M8 9.5a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3z" />
-                        </svg>
+                    <svg class="bi bi-dot" width="1.5em" height="1.5em" viewBox="0 0 16 16" fill="black" xmlns="http://www.w3.org/2000/svg" style="visibility: visible">
+                        <path fill-rule="evenodd" d="M8 9.5a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3z" />
+                    </svg>
+                    <a class="nav-link" href="#" style="display: inline">
                         <b>work</b>
                         <span class="sr-only">
                         </span>
