--- a/html/about.html
+++ b/html/about.html
@@ -24,7 +24,8 @@
                         <svg class="bi bi-dot" width="1.5em" height="1.5em" viewBox="0 0 16 16" fill="black" xmlns="http://www.w3.org/2000/svg" style="visibility: hidden">
                             <path fill-rule="evenodd" d="M8 9.5a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3z" />
                         </svg>
-                        home<span class="sr-only"></span></a>
+                        home
+                        <span class="sr-only"></span></a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="work.html">
